<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".RadioButtonActivity">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:id="@+id/textInputLayoutEditText"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:hintAnimationEnabled="true"
                                                   android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                                                   android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/number1EditText"
                                                         android:hint="@string/enter_number_1_here"
        />

    </android.support.design.widget.TextInputLayout

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/textInputLayoutEditText2"
                                                   app:hintAnimationEnabled="true"
                                                   android:layout_marginTop="8dp"
                                                   app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditText"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="8dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="8dp">
        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/number2EditText"
                                                         android:hint="@string/enter_number_2_here"
        />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/operationRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditText2">

        <RadioButton
                android:text="+"
                android:padding="8dp"
                android:checked="true"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="306dp"
                tools:layout_editor_absoluteX="192dp" android:id="@+id/plusRadioButton"/>

        <RadioButton
                android:text="-"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="408dp"
                tools:layout_editor_absoluteX="149dp" android:id="@+id/minusRadioButton"/>

        <RadioButton
                android:text="×"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="470dp"
                tools:layout_editor_absoluteX="132dp" android:id="@+id/mulRadioButton"/>

        <RadioButton
                android:text="÷"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="535dp"
                tools:layout_editor_absoluteX="107dp" android:id="@+id/divRadioButton"/>


    </RadioGroup>


    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/operationRadioGroup"
            app:layout_constraintEnd_toEndOf="@+id/operationRadioGroup"
            app:layout_constraintStart_toStartOf="@+id/operationRadioGroup"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton"
            app:layout_constraintEnd_toEndOf="@+id/calculateButton"
            app:layout_constraintStart_toStartOf="@+id/calculateButton" android:textSize="24sp"/>


</android.support.constraint.ConstraintLayout>